Finished the project

--- a/src/main/resources/templates/alreadyVoted.html
+++ b/src/main/resources/templates/alreadyVoted.html
@@ -5,6 +5,6 @@
     <title>Ooops!</title>
 </head>
 <body>
-You have already voted!
+<h1 style="color: brown"> You have already voted! </h1>
 </body>
 </html>
